--- a/awfy.service
+++ b/awfy.service
@@ -10,9 +10,10 @@ Group=www-data
 # another option for an even more restricted service is
 # DynamicUser=yes
 # see http://0pointer.net/blog/dynamic-users-with-systemd.html
-RuntimeDirectory=/var/www/codespeed/awfy-speed
+# RuntimeDirectory=/var/www/codespeed/awfy-speed
+# --user=www-data --group=www-data 
 WorkingDirectory=/var/www/codespeed/awfy-speed
-ExecStart=/var/www/codespeed/venv/bin/gunicorn -w 3 --bind unix:/run/awfy.sock wsgi:application --user=www-data --group=www-data --log-level=warning --log-file=/var/log/gunicorn/awfy.log
+ExecStart=/var/www/codespeed/venv/bin/gunicorn -w 3 --bind unix:/var/www/codespeed/awfy.sock wsgi:application --log-level=warning --log-file=/var/log/gunicorn/awfy.log
 ExecReload=/bin/kill -s HUP $MAINPID
 KillMode=mixed
 TimeoutStopSec=5
