--- a/awfy.service
+++ b/awfy.service
@@ -1,6 +1,5 @@
 [Unit]
 Description=awfy gunicorn daemon
-Requires=awfy.socket
 After=network.target
 
 [Service]
@@ -13,7 +12,7 @@ Group=www-data
 # RuntimeDirectory=/var/www/codespeed/awfy-speed
 # --user=www-data --group=www-data 
 WorkingDirectory=/var/www/codespeed/awfy-speed
-ExecStart=/var/www/codespeed/venv/bin/gunicorn -w 3 --bind unix:/var/www/codespeed/awfy.sock wsgi:application --log-level=warning --log-file=/var/log/gunicorn/awfy.log
+ExecStart=/var/www/codespeed/venv/bin/gunicorn --workers 3 --bind unix:/var/www/codespeed/awfy.sock wsgi:application --log-level=warning --log-file=/var/log/gunicorn/awfy.log
 ExecReload=/bin/kill -s HUP $MAINPID
 KillMode=mixed
 TimeoutStopSec=5
